#pragma once

#include <array>
#include <string>
#include <eigen3/Eigen/Dense>

#include <pinocchio/parsers/urdf.hpp>
#include <pinocchio/algorithm/joint-configuration.hpp>
#include <pinocchio/algorithm/kinematics.hpp>
#include <pinocchio/algorithm/jacobian.hpp>
#include <pinocchio/algorithm/frames.hpp>
#include <pinocchio/algorithm/crba.hpp>
#include <pinocchio/algorithm/centroidal.hpp>
#include <pinocchio/algorithm/center-of-mass.hpp>
#include <pinocchio/algorithm/rnea.hpp>

namespace quadro
{

        
static constexpr size_t NUM_JOINTS = 12;
static constexpr size_t NUM_LEGS = 4;
static constexpr size_t JOINTS_PER_LEG = 3;

// ── Canonical joint order ────────────────────────────────────────
// Grouped by leg: FL, FR, BL, BR × (hip, knee, ankle).
// JointIdx indexes the q, dq, effort, Kp, Kd arrays.

enum LegIdx  { FL = 0, FR = 1, BL = 2, BR = 3 };
enum JointIdx {
    FL_HIP = 0, FL_KNEE, FL_ANKLE,
    FR_HIP,     FR_KNEE, FR_ANKLE,
    BL_HIP,     BL_KNEE, BL_ANKLE,
    BR_HIP,     BR_KNEE, BR_ANKLE
};

// EXPECTED_JOINT_NAMES[i] is the URDF joint name for JointIdx i
static const std::array<std::string, NUM_JOINTS> EXPECTED_JOINT_NAMES = {
    "fl_m1_s1",   "fl_m2_s2",   "fl_l4_l3",   // FL: hip, knee, ankle
    "fr_m1_s1",   "fr_m2_s2",   "fr_l4_l3",   // FR
    "bl_m1_s1",   "bl_m2_s2",   "bl_l4_l3",   // BL
    "br_m1_s1",   "br_m2_s2",   "br_l4_l3",   // BR
};

class QuadroModel
{
public:
    QuadroModel() = default;

    /// Build model from URDF. The mapping from canonical JointIdx order to
    /// Pinocchio's internal order is computed once here.
    explicit QuadroModel(const std::string& urdf_path);

    /// Update joint state and run Pinocchio forward algorithms.
    /// q, dq, effort are in canonical (JointIdx) order.
    void updateState(const Eigen::VectorXd& q, const Eigen::VectorXd& dq,
                     const Eigen::VectorXd& effort);

    // State in canonical order — indexed by JointIdx: q_[FL_HIP], dq_[BR_ANKLE], etc.
    const Eigen::VectorXd& jointPositions() const { return q_; }
    const Eigen::VectorXd& jointVelocities() const { return dq_; }
    const Eigen::VectorXd& jointEfforts() const { return effort_; }
    const Eigen::VectorXd& gravityCompensation() const { return gravity_canonical_; }

    /// Non-linear effects (C·v + g) in canonical (JointIdx) order — used for swing
    /// torque feedforward: `tau += nle[base + j]`
    const Eigen::VectorXd& nonlinearEffects() const { return nle_canonical_; }

    /// Symmetrized joint-space inertia matrix (nv × nv) in Pinocchio order
    const Eigen::MatrixXd& massMatrix() const { return data_.M; }

    /// Generalized velocity in Pinocchio order (length nv)
    const Eigen::VectorXd& dqPin() const { return dq_pin_; }

    /// Foot position in world frame (from Pinocchio FK, updated by updateState)
    Eigen::Vector3d footPosition(int leg_idx) const;

    /// Foot linear velocity in world frame (from Pinocchio FK, updated by updateState)
    Eigen::Vector3d footVelocity(int leg_idx) const;

    /// 3×3 foot Jacobian: linear velocity in world frame, columns = leg's 3 joints only
    Eigen::Matrix3d footJacobian(int leg_idx) const;

    /// Full 3×nv linear part of the foot Jacobian in WORLD frame.
    /// Used for operational-space inertia: Λ = (J·M⁻¹·Jᵀ)⁻¹.
    Eigen::Matrix<double, 3, Eigen::Dynamic> footFullJacobianLinear(int leg_idx) const;

    /// Linear part of Jdot·v at the foot, expressed in WORLD frame (3-vector).
    /// Used as feedforward in operational space: f_ff = Λ·(a_des − Jdot·v).
    Eigen::Vector3d footJdotV(int leg_idx) const;

    /// Hip joint position in world frame
    Eigen::Vector3d hipPosition(int leg_idx) const;

    /// Update base state from odometry. Populates the 13-state vector:
    /// x = [roll, pitch, yaw, px, py, pz, wx, wy, wz, vx, vy, vz, -g]
    void updateBaseState(const Eigen::Vector3d& position,
                         const Eigen::Quaterniond& orientation,
                         const Eigen::Vector3d& linear_velocity,
                         const Eigen::Vector3d& angular_velocity);

    const Eigen::Matrix<double, 13, 1>& stateVector() const { return x; }

    /// Total robot mass (from data.Ig)
    double mass() const { return data_.Ig.mass(); }

    /// Composite inertia tensor of the whole robot about its COM, expressed in
    /// the world frame. Used as the body inertia in the MPC rigid-body model.
    Eigen::Matrix3d bodyInertia() const { return data_.Ig.inertia().matrix(); }

    /// Yaw-only rotation matrix R_z(ψ): rotates body-frame vectors to world
    /// frame. Updated by updateBaseState().
    const Eigen::Matrix3d& bodyYawRotation() const { return R_z_; }
    const Eigen::Matrix3d& bodyToWorldRotation() const { return R_b_w_; }

    /// base_link world position (from odometry, set in updateBaseState).
    /// This — NOT stateVector()[3:5] — is the anchor for transforming body-frame
    /// foot offsets to world frame. stateVector() position is the CoM (MPC
    /// convention) and differs from base_link by data_.com[0] − base_link.
    const Eigen::Vector3d& bodyPosition() const { return base_position_; }

    const pinocchio::Model& pinocchioModel() const { return model_; }
    pinocchio::Data& pinocchioData() { return data_; }
    const pinocchio::Data& pinocchioData() const { return data_; }

private:
    pinocchio::Model model_;
    mutable pinocchio::Data data_;

    // Joint state in canonical (JointIdx) order
    Eigen::VectorXd q_;
    Eigen::VectorXd dq_;
    Eigen::VectorXd effort_;

    // Temporary vectors in Pinocchio order (avoid reallocation)
    Eigen::VectorXd q_pin_;
    Eigen::VectorXd dq_pin_;

    Eigen::VectorXd gravity_canonical_;

    // Non-linear effects (C·v + g) remapped to canonical (JointIdx) order
    Eigen::VectorXd nle_canonical_;

    // canonical_to_pin_[i] = Pinocchio's q-index for canonical joint i
    std::array<int, NUM_JOINTS> canonical_to_pin_{};
    // canonical_to_pin_v_[i] = Pinocchio's v-index for canonical joint i
    std::array<int, NUM_JOINTS> canonical_to_pin_v_{};
    // leg_pin_v_cols_[leg][j] = Pinocchio's v-index for the j-th joint of leg
    std::array<std::array<int, JOINTS_PER_LEG>, NUM_LEGS> leg_pin_v_cols_{};

    // Cached frame IDs (set once in constructor)
    std::array<pinocchio::FrameIndex, NUM_LEGS> foot_frame_ids_;
    std::array<pinocchio::FrameIndex, NUM_LEGS> hip_frame_ids_;

    // Cached physical parameters (computed once in constructor)
    Eigen::Matrix3d R_z_          = Eigen::Matrix3d::Identity(); // yaw-only body→world rotation
    Eigen::Matrix3d R_b_w_        = Eigen::Matrix3d::Identity(); // full body→world rotation
    Eigen::Vector3d base_position_ = Eigen::Vector3d::Zero();    // base_link world position from odom

    // Latest base state cached from updateBaseState(). Used by updateState() to
    // resync q_pin_/dq_pin_ before every Pinocchio call so CRBA/ccrba/FK never
    // operate on a stale base orientation between odom updates (joint states and
    // odom arrive on separate ROS callbacks).
    Eigen::Quaterniond base_quat_      = Eigen::Quaterniond::Identity();
    Eigen::Vector3d   base_lin_vel_body_ = Eigen::Vector3d::Zero();
    Eigen::Vector3d   base_ang_vel_body_ = Eigen::Vector3d::Zero();


    Eigen::Matrix<double, 13, 1> x;

    double g = 9.81;
};
    
} // namespace quadro

