#pragma once
#include <array>
#include <cmath>
#include <cstdio>
#include <eigen3/Eigen/Dense>
#include <unsupported/Eigen/MatrixFunctions>

#include "qpOASES.hpp"
#include <casadi/casadi.hpp>

#include "model.hpp"
#include "gait_scheduler.hpp"

namespace quadro
{

// MPC horizon — shared by MPC and Controller.
// Total prediction window: HORIZON_STEPS × MPC_DT = 0.33 s
static constexpr int    HORIZON_STEPS = 10;
static constexpr double MPC_DT        = 0.033;

class MPC
{
public:

    /// Snapshot all data needed for this solve from the model and controller.
    /// Called once per mpcCallback before any matrix computation.
    /// `levers[k][leg]` is the foot-to-CoM lever arm (world frame) for the leg
    /// at horizon step k — zero for swing steps, held constant per stance phase.
    void update(const QuadroModel& model,
                const Eigen::Vector3d& angular_vel_cmd,
                const Eigen::Vector3d& linear_vel_cmd,
                const std::array<Eigen::Matrix<double, 13, 1>, HORIZON_STEPS>& x_ref,
                const GaitScheduler& gait_scheduler,
                const std::array<std::array<Eigen::Vector3d, NUM_LEGS>, HORIZON_STEPS>& levers);

    /// Build per-step Ac/Ad and Bc/Bd from per-step yaw and contact schedule.
    /// Must be called after update().
    void calculateDynamicsMatrices();

    /// Solve QP using the CasADi/OSQP sparse formulation.
    void run_casadi();

    // Per-step A matrices — index by horizon step [0, HORIZON_STEPS).
    const std::array<Eigen::Matrix<double, 13, 13>, HORIZON_STEPS>& continuousA() const { return Ac_; }
    const std::array<Eigen::Matrix<double, 13, 13>, HORIZON_STEPS>& discreteA()   const { return Ad_; }

    // Per-step B matrices — index by horizon step [0, HORIZON_STEPS)
    const std::array<Eigen::Matrix<double, 13, 12>, HORIZON_STEPS>& continuousB() const { return Bc_; }
    const std::array<Eigen::Matrix<double, 13, 12>, HORIZON_STEPS>& discreteB()   const { return Bd_; }

    const std::array<Eigen::Matrix<double, 13, 1>, HORIZON_STEPS>& referenceTrajectory() const { return x_ref_; }

    // contact_schedule_[k][leg] = true if leg is stance at step k
    const std::array<std::array<bool, NUM_LEGS>, HORIZON_STEPS>& contactSchedule() const { return contact_schedule_; }

    const Eigen::Matrix<double, 13, 1>& currentState() const { return x0_; }

    // GRFs produced by the solve — one 3D force per leg (world frame), zero for swing
    const std::array<Eigen::Vector3d, NUM_LEGS>& groundReactionForces() const { return grfs_; }

private:

    // ── Snapshot (populated by update()) ──────────────────────────
    Eigen::Matrix<double, 13, 1>                             x0_           = Eigen::Matrix<double, 13, 1>::Zero();
    double                                                   mass_         = 0.0;
    Eigen::Matrix3d                                          body_inertia_ = Eigen::Matrix3d::Zero();
    // Per-horizon-step lever arms r[k][leg] = foot_world − base_traj_world.
    // Zero on swing steps, held constant during stance phases.
    std::array<std::array<Eigen::Vector3d, NUM_LEGS>, HORIZON_STEPS> levers_{};
    Eigen::Vector3d                                          angular_vel_cmd_ = Eigen::Vector3d::Zero();
    Eigen::Vector3d                                          linear_vel_cmd_  = Eigen::Vector3d::Zero();
    std::array<Eigen::Matrix<double, 13, 1>, HORIZON_STEPS>  x_ref_{};
    std::array<std::array<bool, NUM_LEGS>, HORIZON_STEPS>    contact_schedule_{};

    // ── Computed matrices ──────────────────────────────────────────
    // Per-step Ac_[n] / Ad_[n] (13×13) built from the per-step reference yaw.
    std::array<Eigen::Matrix<double, 13, 13>, HORIZON_STEPS> Ac_{};
    std::array<Eigen::Matrix<double, 13, 13>, HORIZON_STEPS> Ad_{};

    // Per-step Bc_[n] / Bd_[n] (13×12 = 4 legs × 3 forces)
    std::array<Eigen::Matrix<double, 13, 12>, HORIZON_STEPS> Bc_{};
    std::array<Eigen::Matrix<double, 13, 12>, HORIZON_STEPS> Bd_{};

    // grfs_[i] = 3D GRF for leg i (world frame). Zero for swing legs.
    // Layout matches LegIdx: FL=0, FR=1, BL=2, BR=3
    std::array<Eigen::Vector3d, NUM_LEGS> grfs_{
        Eigen::Vector3d::Zero(), Eigen::Vector3d::Zero(),
        Eigen::Vector3d::Zero(), Eigen::Vector3d::Zero()
    };

    // ── QP dimensions ─────────────────────────────────────────────
    static constexpr int N_STATE = 13;
    static constexpr int N_FORCE = static_cast<int>(NUM_LEGS) * 3;          // 12
    static constexpr int N_VAR   = N_FORCE * HORIZON_STEPS;                 // 120
    static constexpr int N_PRED  = N_STATE * HORIZON_STEPS;                 // 130
    static constexpr int N_CON   = 4 * static_cast<int>(NUM_LEGS) * HORIZON_STEPS; // 160

    // ── Tuning parameters ─────────────────────────────────────────
    static constexpr double mu_     = 0.8;    // friction coefficient
    static constexpr double fz_min_ = 2.0;    // min normal GRF [N]
    static constexpr double fz_max_ = 70.0;   // max normal GRF [N]
    static constexpr double alpha_  = 1e-5;   // force-magnitude regularisation

    // State cost weights: [roll, pitch, yaw, px, py, pz, wx, wy, wz, vx, vy, vz, -g]
    static constexpr double Q_WEIGHTS[N_STATE] = {
        20.0, 10.0,  10.0,  // roll(φ), pitch(θ), yaw(ψ)
         1.0,  1.0, 30.0,  // px, py, pz
         1.0,  1.0,  1.0,  // ωx, ωy, ωz
         2.0,  2.0,  1.0,  // vx, vy, vz
         0.0                // -g, don't penalise
    };

    // ── Pre-allocated QP matrices (condensed system X = Aqp*x0 + Bqp*U) ──
    Eigen::Matrix<double, N_PRED, N_STATE>  Aqp_     = Eigen::Matrix<double, N_PRED, N_STATE>::Zero();
    Eigen::Matrix<double, N_PRED, N_VAR>    Bqp_     = Eigen::Matrix<double, N_PRED, N_VAR>::Zero();

    Eigen::Matrix<double, N_PRED, 1>        L_diag_  = Eigen::Matrix<double, N_PRED, 1>::Zero();
    Eigen::Matrix<double, N_PRED, 1>        X_ref_qp_ = Eigen::Matrix<double, N_PRED, 1>::Zero();

    // QP cost: ½UᵀHU + gᵀU
    Eigen::Matrix<double, N_VAR, N_VAR>     H_       = Eigen::Matrix<double, N_VAR, N_VAR>::Zero();
    Eigen::Matrix<double, N_VAR, 1>         g_qp_    = Eigen::Matrix<double, N_VAR, 1>::Zero();

    // Friction-pyramid constraint matrix and bounds: lbC <= C*U <= ubC
    Eigen::MatrixXd C_   = Eigen::MatrixXd::Zero(N_CON, N_VAR);
    Eigen::Matrix<double, N_CON, 1>         lbC_     = Eigen::Matrix<double, N_CON, 1>::Zero();
    Eigen::Matrix<double, N_CON, 1>         ubC_     = Eigen::Matrix<double, N_CON, 1>::Zero();

    // Per-variable bounds (stance: fz in [fz_min, fz_max]; swing: lb=ub=0)
    Eigen::Matrix<double, N_VAR, 1>         lb_      = Eigen::Matrix<double, N_VAR, 1>::Zero();
    Eigen::Matrix<double, N_VAR, 1>         ub_      = Eigen::Matrix<double, N_VAR, 1>::Zero();

    // Row-major copies required by qpOASES (which expects C-order arrays).
    Eigen::Matrix<double, N_VAR, N_VAR, Eigen::RowMajor> H_qp_;
    Eigen::Matrix<double, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor>
        C_qp_ = Eigen::Matrix<double, Eigen::Dynamic, Eigen::Dynamic, Eigen::RowMajor>::Zero(N_CON, N_VAR);

    qpOASES::QProblem qp_{N_VAR, N_CON, qpOASES::HST_POSDEF};

    // Warm start: primal (N_VAR) + dual (N_VAR + N_CON) from previous solve
    static constexpr int N_DUAL = N_VAR + N_CON;
    Eigen::Matrix<double, N_VAR, 1>  u_warm_ = Eigen::Matrix<double, N_VAR, 1>::Zero();
    Eigen::Matrix<double, N_DUAL, 1> y_warm_ = Eigen::Matrix<double, N_DUAL, 1>::Zero();
    bool has_warm_start_ = false;

    std::array<std::array<bool, NUM_LEGS>, HORIZON_STEPS> prev_contact_schedule_{};

    // CasADi/OSQP conic solver (run_casadi) — cached across calls
    casadi::Function casadi_solver_;
    casadi::DM       casadi_H_dm_;
    casadi::DM       casadi_z_warm_;
    casadi::DM       casadi_lam_x_warm_;
    casadi::DM       casadi_lam_a_warm_;
    bool             casadi_solver_built_ = false;
    bool             has_casadi_warm_     = false;

    int print_counter_ = 0;

    static Eigen::Matrix3d skewSymmetric(const Eigen::Vector3d& v);

    static constexpr double g_ = 9.81;
};

} // namespace quadro
